--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-
+/mini-project/node_modules
+/mini-project/Nlp/node_modules
 # testing
 /coverage
 
