--- a/mini-project/Nlp/package.json
+++ b/mini-project/Nlp/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "SI_NODE",
+  "name": "SI-NODE",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
@@ -14,8 +14,7 @@
     "natural": "^5.2.2",
     "node-nlp": "^4.24.0",
     "nodemon": "^2.0.16",
-    "npm": "^8.12.1",
-    "pengines": "^2.0.0"
+    "npm": "^8.12.1"
   },
   "description": ""
 }
