--- a/mini-project/Nlp/package.json
+++ b/mini-project/Nlp/package.json
@@ -2,7 +2,7 @@
   "name": "SI-NODE",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
