--- a/mini-project/react_website/package.json
+++ b/mini-project/react_website/package.json
@@ -16,13 +16,12 @@
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
-    "build": "react-scripts build",
+    "build": "dotenv -e .env.${REACT_APP_ENVIRONMENT} react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
-    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ]
